// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useNormalizeOpportunities returns transformed array of active opportunities sorted by cryptoAmount when there are active staking opportunities 1`] = `
Array [
  Object {
    "apy": "0.1423595556",
    "assetId": "cosmos:cosmoshub-4/slip44:118",
    "chain": "cosmos",
    "contractAddress": "cosmosvaloper199mlc7fr6ll5t54w7tts7f4s0cvnqgc59nmuxf",
    "cryptoAmount": "0.010115",
    "fiatAmount": "0.25",
    "moniker": "ShapeShift DAO",
    "provider": "Cosmos",
    "rewardAddress": "",
    "showAssetSymbol": true,
    "tokenAddress": "118",
    "tvl": "30165485.58358955",
    "type": "token_staking",
    "version": "ShapeShift DAO Validator",
  },
  Object {
    "apy": "0.1440995057",
    "assetId": "cosmos:cosmoshub-4/slip44:118",
    "chain": "cosmos",
    "contractAddress": "cosmosvaloper1clpqr4nrk4khgkxj78fcwwh6dl3uw4epsluffn",
    "cryptoAmount": "0.005",
    "fiatAmount": "0.13",
    "moniker": "Cosmostation",
    "provider": "Cosmos",
    "rewardAddress": "",
    "showAssetSymbol": true,
    "tokenAddress": "118",
    "tvl": "97018072.90102755",
    "type": "token_staking",
    "version": "Cosmostation Validator",
  },
  Object {
    "apy": "0.158177284",
    "assetId": "cosmos:cosmoshub-4/slip44:118",
    "chain": "cosmos",
    "contractAddress": "cosmosvaloper1qtxec3ggeuwnca9mmngw7vf6ctw54cppey02fs",
    "cryptoAmount": "0.000004",
    "fiatAmount": "0.00",
    "moniker": "tokenpocket",
    "provider": "Cosmos",
    "rewardAddress": "",
    "showAssetSymbol": true,
    "tokenAddress": "118",
    "tvl": "22345.33638995",
    "type": "token_staking",
    "version": "tokenpocket Validator",
  },
]
`;

exports[`useNormalizeOpportunities returns transformed array of staking opportunities when there is no active staking opportunity 1`] = `
Array [
  Object {
    "apy": "0.1423595556",
    "assetId": "cosmos:cosmoshub-4/slip44:118",
    "chain": "cosmos",
    "contractAddress": "cosmosvaloper199mlc7fr6ll5t54w7tts7f4s0cvnqgc59nmuxf",
    "cryptoAmount": "",
    "fiatAmount": "",
    "provider": "Cosmos",
    "rewardAddress": "",
    "showAssetSymbol": true,
    "tokenAddress": "118",
    "tvl": "30165485.58358955",
    "type": "token_staking",
  },
  Object {
    "apy": "0.1423595557",
    "assetId": "cosmos:cosmoshub-4/slip44:118",
    "chain": "cosmos",
    "contractAddress": "cosmosvaloper199mlc7fr6ll5t54w7tts7f4s0cvnqgc59nmuxg",
    "cryptoAmount": "",
    "fiatAmount": "",
    "provider": "Cosmos",
    "rewardAddress": "",
    "showAssetSymbol": true,
    "tokenAddress": "118",
    "tvl": "30165486.58358955",
    "type": "token_staking",
  },
]
`;
